# raytracer-challenge

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: canvas.cpp.EEEF8C4D9EF76432.idx  canvas.h.7B5F6C9BEE15A699.idx  main.cpp.0C40678CFDB04240.idx  matrix.cpp.20FB4F27F637EAEC.idx  matrix.h.3C87FBF2623FFE66.idx  projectiles.cpp.34893220561631F6.idx  test_canvas.cpp.663F995F8D4CB619.idx  test_matrix.cpp.914BE6B71BC41F53.idx  test_tuple.cpp.46D4805017EAD2C8.idx  tuple.cpp.2E3C76A92C2C8E26.idx  tuple.h.E321E507BBC7E841.idx
src/: canvas.cpp  canvas.h  main.cpp  matrix.cpp  matrix.h  projectiles.cpp  ray.cpp  ray.h  tuple.cpp  tuple.h
tests/: test_canvas.cpp  test_matrix.cpp  test_ray.cpp  test_tuple.cpp
